flexbox/css/main.css
/**{
	border: 1px solid red !important; 
}*/

*{
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	-ms-box-sizing: border-box;
	box-sizing: border-box;
}

/*Global Styles*/
body{
	background-color: #f9f5ef;
	font-family: 'Roboto', sans-serif;
	line-height: 2em;
}
h1{
	font-family: 'Kumar One', cursive;
	font-size: 4em;
	color: #4d4d4d;
	text-transform: lowercase;
	text-align: center;
}
h2{
	font-family: 'Libre Baskerville', cursive;
	font-size: 2em;
	color: #333333;
	text-transform: lowercase;
	text-align: center;
}

.pullquote{
	font-family: 'Libre Baskerville', serif;
	font-size: 1.2em;
}

/*Nav Bars*/
#top-nav{
	margin-top: 20px;
	margin-bottom: 10px;
}
#bottom-nav{
	/*margin-top: 5px;*/
	margin-bottom: 20px;	
}
.nav-link{
	color: black;  /*TODO -replace w/ proper color*/
	font-family: 'Libre Baskerville', serif;
	font-size: 12pt;
	padding-left: 15px;
	padding-right: 15px;
}
.nav-ra-logo{
	font-family: 'Kumar One', cursive;
	color: #4d4d4d;
}
.nav-seperator{ 
	border: 1px solid grey;
	margin-bottom: 20px;
}


#about-header-img{
	max-height: 40vh;
}

